--- a/demo/res/values/strings.xml
+++ b/demo/res/values/strings.xml
@@ -4,6 +4,9 @@
 	<string name="hello">Hello World, RichTextEditorDemoActivity!</string>
 	<string name="app_name">RichEditText Demo</string>
 	<string name="app_name2">RichEditText ActionMode</string>
-	<string name="testdata">Improved coverage of <tt>AlarmManager</tt> and <a href='https://github.com/commonsguy/cwac-wakeful'><tt>WakefulIntentService</tt></a></string>
-
+    <string name="insert_image_content_description">Insert an image</string>
+    <string name="select_image_source">Select Image Source</string>
+    <string name="await_image_capture_exception">Couldn\'t create capture directory</string>
+    <string name="image_capture_failed_io">Image Capture Failed (IO)</string>
+    <string name="image_capture_failed_oom">Image Capture Failed (OOM)</string>
 </resources>
